trunk/tests/kiama/negative/type_errors/L4/7_badarray2.ob
MODULE badarray2;

CONST
    size = 5;

TYPE
    atype2 = ARRAY size DIV 6 OF BOOLEAN;

END badarray2.
